[gd_scene load_steps=12 format=3 uid="uid://4lausuljfm4u"]

[ext_resource type="Script" path="res://scripts/turret_2_lvl2.gd" id="1_tf5o4"]
[ext_resource type="PackedScene" uid="uid://chljxkfx6yvhs" path="res://scenes/arrow.tscn" id="2_n070o"]
[ext_resource type="PackedScene" uid="uid://ssbyc8gyhxna" path="res://assets/selection-a.glb" id="3_8pdg7"]
[ext_resource type="PackedScene" uid="uid://f0tcmsys080" path="res://assets/weapon-ballista.glb" id="4_pvie7"]
[ext_resource type="PackedScene" uid="uid://xd8i5o0fdrxl" path="res://assets/tower-square-build-b.glb" id="5_g8i5e"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="6_7c2w2"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="7_yubcp"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_bpvdi"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="9_pop7w"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_u7cdx"]
radius = 4.0

[sub_resource type="BoxShape3D" id="BoxShape3D_h2g1e"]
size = Vector3(0.9, 1.3, 0.9)

[node name="Turret2" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
script = ExtResource("1_tf5o4")
fire_rate_ms = 222
projectile_type = ExtResource("2_n070o")
upgrade_cost = 160
selection_frame = ExtResource("3_8pdg7")

[node name="Ballista" parent="." instance=ExtResource("4_pvie7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="projectile_spawn" type="Node3D" parent="Ballista"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)

[node name="tower" parent="." instance=ExtResource("5_g8i5e")]

[node name="PatrolZone" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PatrolZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_u7cdx")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("6_7c2w2")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("7_yubcp")
initial_state = NodePath("PatrollingState")

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_bpvdi")

[node name="AcquiringState" type="Node" parent="StateChart/CompoundState/PatrollingState"]
script = ExtResource("9_pop7w")
to = NodePath("../../AcquiringState")
event = &"to_acquiring_state"

[node name="AcquiringState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_bpvdi")

[node name="AttackingState" type="Node" parent="StateChart/CompoundState/AcquiringState"]
script = ExtResource("9_pop7w")
to = NodePath("../../AttackingState")
event = &"to_attacking_state"

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState/AcquiringState"]
script = ExtResource("9_pop7w")
to = NodePath("../../PatrollingState")
event = &"to_patrolling_state"

[node name="AttackingState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_bpvdi")

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState/AttackingState"]
script = ExtResource("9_pop7w")
to = NodePath("../../PatrollingState")
event = &"to_patrolling_state"

[node name="ClickToUpgrade" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="ClickCollisionShape3D" type="CollisionShape3D" parent="ClickToUpgrade"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
shape = SubResource("BoxShape3D_h2g1e")

[connection signal="area_entered" from="PatrolZone" to="." method="_on_patrol_zone_area_entered"]
[connection signal="area_exited" from="PatrolZone" to="." method="_on_patrol_zone_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/PatrollingState" to="." method="_on_patrolling_state_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/AcquiringState" to="." method="_on_acquiring_state_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/AcquiringState" to="." method="_on_acquiring_state_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/AttackingState" to="." method="_on_attacking_state_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/AttackingState" to="." method="_on_attacking_state_state_physics_processing"]
